# cpp-profiler-engine

./: CMakeLists.txt
include/: CpuModule.hpp  IModule.hpp  PluginLoader.hpp  SystemInfo.hpp
src/: CpuModule.cpp  cpu_plugin.cpp
src/loader/: PluginLoader.cpp
src/platform/: CpuLinux.cpp  CpuMacOS.cpp  CpuWindows.cpp
test/: cpu_test.cpp  loader_test.cpp
